Fix spacing on password hint

--- a/style.css
+++ b/style.css
@@ -135,7 +135,7 @@ input:invalid:not(:placeholder-shown){
   border-color: var(--bluel);
 }
 .password-rules li{
-  margin-top: 10px;
+  margin: 10px 0;
   margin-left: 20px;
   color: var(--pinkd);
 }
